Resolvido problema com as imagens

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -11,3 +11,14 @@
 .card-lista{
     max-width: 80em;
 }
+.foto{
+    max-width: 25em;
+}
+.img-thumbnail {
+    padding: .25rem;
+    background-color: #fff;
+    border: 1px solid #dee2e6;
+    border-radius: .25rem;
+    /* max-width: 100%; */
+    height: auto;
+}
