--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -19,6 +19,7 @@
     background-color: #fff;
     border: 1px solid #dee2e6;
     border-radius: .25rem;
+    width: 100%;
     /* max-width: 100%; */
     height: auto;
 }
