--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -30,9 +30,22 @@
 }
 
 body {
-    background-color: #212529;
-    opacity: 1;
-    background-image: linear-gradient(30deg, #0d6efd 12%, transparent 12.5%, transparent 87%, #0d6efd 87.5%, #0d6efd), linear-gradient(150deg, #0d6efd 12%, transparent 12.5%, transparent 87%, #0d6efd 87.5%, #0d6efd), linear-gradient(30deg, #0d6efd 12%, transparent 12.5%, transparent 87%, #0d6efd 87.5%, #0d6efd), linear-gradient(150deg, #0d6efd 12%, transparent 12.5%, transparent 87%, #0d6efd 87.5%, #0d6efd), linear-gradient(60deg, #0d6efd77 25%, transparent 25.5%, transparent 75%, #0d6efd77 75%, #0d6efd77), linear-gradient(60deg, #0d6efd77 25%, transparent 25.5%, transparent 75%, #0d6efd77 75%, #0d6efd77);
-    background-size: 50px 88px;
-    background-position: 0 0, 0 0, 25px 44px, 25px 44px, 0 0, 25px 44px;
+	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+.link-ligh{
+    color:#fff;
 }
