Adicionada remoção de resenha e de conteúdo

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -30,7 +30,7 @@
 }
 
 body {
-	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background: linear-gradient(-45deg, #141414, #2A2E2A, #454745, #A8ADA8);
 	background-size: 400% 400%;
 	animation: gradient 15s ease infinite;
 }
@@ -46,6 +46,6 @@ body {
 		background-position: 0% 50%;
 	}
 }
-.link-ligh{
+.link-light{
     color:#fff;
 }
